<resources>
    <string name="app_name">DWACommerce</string>
    <string name="url">URL</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="customer_id">Customer Id</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="select_store">Select Store</string>
    <string name="change_store">Change Store</string>
    <string name="store_name">Store name</string>
    <string name="select_terminal">Select Terminal</string>
    <string name="add">Add</string>
    <string name="scan">Scan</string>
    <string name="Redeem_lp">Redeem LP</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="cc">CC</string>
    <string name="promotion">Promotion</string>
    <string name="clear_reset">Clear/Reset</string>
    <string name="credit_amount">Credit(Amount)</string>
    <string name="complete">Complete</string>
    <string name="print_invoice">Print Invoice</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="find_customer">Find Customer</string>
    <string name="add_customer">Add Customer</string>
    <string name="filter">Filter</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="address1">Address1</string>
    <string name="select">Select</string>
    <string name="by_name">By Name</string>
    <string name="by_phone">By Phoen</string>
    <string name="by_email">By Email</string>
    <string name="by_address">By Address</string>
    <string name="new_customer">New Customer</string>
    <string name="done">Done</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="mar_status">Marital Status</string>
    <string name="dob">DOB</string>
    <string name="Annive_date">anniversary Date</string>
    <string name="phone_hash">Phone #</string>
    <string name="save">Save</string>
    <string name="enter_promo_code">Enter promo code</string>
    <string name="redeem_loyalty_points">Redeem loyalty points</string>
    <string name="cash_amount">Cash Amount</string>
    <string name="card_amount">Card Amount</string>
    <string name="cheque_amount">Cheque Amount</string>
    <string name="comment">Comment</string>
    <string name="save_clear_sale">SAVE &amp; CLEAR CURRENT SALE</string>
    <string name="replace_delete">REPLACE &amp; DELETE</string>
    <string name="app_title">ePOS2 Printer</string>
    <string name="btn_discovery">Discovery</string>
    <string name="title_target">Target</string>
    <string name="title_printerseries">Printer Series</string>
    <string name="title_lang">Lang</string>
    <string name="btn_print_receipt">Print Receipt</string>
    <string name="btn_samplecoupon">Sample Coupon</string>
    <string name="btn_restart">Restart</string>
    <string name="title_activity_discovery">DiscoveryActivity</string>
    <string name="title_printerlist">Printer List</string>
    <string name="default_target">TCP:192.168.192.168</string>
    <string name="default_scanner_target">TCP:192.168.192.168[local_scanner]</string>
    <string name="title_warnings">Printer Warnings</string>
    <string name="print_job_id">ABC123</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>
    <string name="printerseries_m10">TM-m10 Series</string>
    <string name="printerseries_m30">TM-m30 Series</string>
    <string name="printerseries_p20">TM-P20 Series</string>
    <string name="printerseries_p60">TM-P60 Series</string>
    <string name="printerseries_p60ii">TM-P60II Series</string>
    <string name="printerseries_p80">TM-P80 Series</string>
    <string name="printerseries_t20">TM-T20 Series</string>
    <string name="printerseries_t60">TM-T60 Series</string>
    <string name="printerseries_t70">TM-T70 Series</string>
    <string name="printerseries_t81">TM-T81 Series</string>
    <string name="printerseries_t82">TM-T82 Series</string>
    <string name="printerseries_t83">TM-T83 Series</string>
    <string name="printerseries_t88">TM-T88 Series</string>
    <string name="printerseries_t90">TM-T90 Series</string>
    <string name="printerseries_t90kp">TM-T90KP Series</string>
    <string name="printerseries_u220">TM-U220 Series</string>
    <string name="printerseries_u330">TM-U330 Series</string>
    <string name="printerseries_l90">TM-L90 Series</string>
    <string name="printerseries_h6000">TM-H6000 Series</string>
    <string name="lang_ank">ANK</string>
    <string name="lang_japanese">JAPANESE</string>
    <string name="lang_chinese">CHINESE</string>
    <string name="lang_taiwan">TAIWAN</string>
    <string name="lang_korean">KOREAN</string>
    <string name="lang_thai">THAI</string>
    <string name="lang_southasia">SOUTH ASIA</string>
    <string name="action_settings">Settings</string>
    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>
    <string name="printing_confirmation">Receipt Printing</string>
    <string name="quantity">Quantity   :</string>
    <string name="item_name">Item Name :</string>
    <string name="price">Price(INR) :</string>
    <string name="per_unit">Per unit</string>
    <string name="language">Language</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="qty">Qty</string>
    <string name="rate">Rate</string>
    <string name="amount">Amount</string>
    <string name="bank_amount">Bank(Amount)</string>
    <string name="by_cash">By Cash(Amount)</string>
    <string name="by_debit_credit">By Debit/Credit(Amount)</string>
    <string name="bank">Bank</string>

    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product Name</string>
    <string name="dismiss">DISMISS</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="close_terminal">Close Terminal</string>
    <string name="enter_cash_amount">Enter Cash Amount</string>
    <string name="enter_cheque_amount">Enter Cheque Amount</string>
    <string name="enter_credit_card_amount">Enter Credit Card Amount</string>
    <string name="enter_gift_card_amount">Enter Gift Card Amount</string>
    <string name="enter_other_payment_amount">Enter Other Payment Amount</string>
    <string name="confirm">Confirm ?</string>
    <string name="amount_to_be_paid_is">Amount to be paid is</string>
    <string name="reference_no">Reference No.</string>
    <string name="barcode">barcode</string>
    <string name="sub_total">Sub Total</string>
    <string name="vat_tax">Vat Tax</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="discount">Discount</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="total_due">Total Due</string>
    <string name="grand_total">Grand Total</string>
    <string name="layout_setting">Layout Setting</string>
    <string name="search_customer">Search Customer</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="load_sale">LOAD SALE</string>
    <string name="replace">REPLACE</string>
    <string name="delete">DELETE</string>
    <string name="CANCEL">CANCEL</string>
    <string name="SAVE">SAVE</string>
    <string name="ADD">ADD</string>
    <string name="saved_sale_list">Saved Sale list</string>
    <string name="load">load</string>
    <string name="do_you_want_to_logout">Do you want to Logout ?</string>
    <string name="NO">NO</string>
    <string name="YES">YES</string>
    <string name="confirmation">Confirmation</string>
    <string name="APPLY">APPLY</string>
    <string name="open_terminal">Open Terminal</string>
    <string name="starting_drawer_amount">Starting Drawer Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="paid_in">Paid In</string>
    <string name="you_have_to_choose_reason">You have to choose a reason</string>
    <string name="you_can_insert_comment">You can insert a comment</string>
    <string name="paid_out">Paid Out</string>
    <string name="enter_amount_to_withdraw">Enter amount to withdraw</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="print">Print</string>
    <string name="select_printer">Select Printer</string>
    <string name="printer_width_inch">Printer Width(inch)</string>
    <string name="test_connection">Test Connection</string>
    <string name="please_select_variants">Please Select Variants</string>
    <string name="save_sale">SAVE SALE</string>
    <string name="webpos_save_sale">WebPos Save Sale</string>
    <string name="Demo">Demo</string>
    <string name="OK">OK</string>
    <string name="update_item">Update Item</string>
    <string name="lorem_ipsum_is_the_sample_text">Lorem Ipsum is the sample text</string>
    <string name="DISMISS">DISMISS</string>
    <string name="UPDATE">UPDATE</string>
    <string name="credit_card_payment">Credit Card Payment</string>
    <string name="cheque_payment">Cheque Payment</string>

    <string name="print_statement">Print Statement</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="add_new_item">Add New Product</string>
    <string name="credit_amount_text">Credit Amount</string>
    <string name="printing_error">Error while printing</string>
</resources>
