<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/add_cash_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_16"
        android:layout_marginRight="@dimen/dim_16"
        android:layout_marginTop="@dimen/dim_8"
        android:text="@string/paid_out"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_dim_15"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_16"
                android:text="@string/enter_amount_to_withdraw"
                android:textColor="@color/black"
                android:textSize="@dimen/text_dim_12"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAmountPaymentPaidAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_4"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtCashAmountPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dim_4"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/etxtAmountPaidOutDialog"
        style="@style/et_new_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_16"
        android:layout_marginRight="@dimen/dim_16"
        android:layout_marginTop="@dimen/dim_5"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_16"
        android:layout_marginTop="@dimen/dim_4"
        android:text="@string/you_have_to_choose_reason"
        android:textColor="@color/black"
        android:textSize="@dimen/text_dim_12"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_16"
        android:layout_marginRight="@dimen/dim_16"
        android:layout_marginTop="@dimen/dim_5"
        android:background="@drawable/transparent_background_border"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/drpDwnPaidOutDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_16"
        android:layout_marginTop="@dimen/dim_4"
        android:text="@string/you_can_insert_comment"
        android:textColor="@color/black"
        android:textSize="@dimen/text_dim_12"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etxtCommentPaidOutDialog"
        style="@style/et_new_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_16"
        android:layout_marginRight="@dimen/dim_16"
        android:layout_marginTop="@dimen/dim_5"
        android:hint="@string/comment"
        android:inputType="text"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_5"
        android:layout_marginTop="@dimen/dim_5"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCancelPaidOutDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dim_20"
            android:background="@color/colorAccent"
            android:padding="@dimen/dim_5"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dim_15"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtConfirmPaidOutDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dim_20"
            android:background="@color/dark_pink"
            android:padding="@dimen/dim_5"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dim_15"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
