<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/add_cash_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_16"
        android:layout_marginRight="@dimen/dim_16"
        android:layout_marginTop="@dimen/dim_8"
        android:text="@string/redeem_loyalty_points"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_dim_15"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtLoyaltyPointsDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_16"
        android:layout_marginRight="@dimen/dim_16"
        android:text=""
        android:textColor="@color/black"
        android:textSize="@dimen/text_dim_12" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_16"
        android:layout_marginRight="@dimen/dim_16"
        android:layout_marginTop="@dimen/dim_10"
        android:gravity="center">

        <EditText
            android:id="@+id/etxtLoyaltyPoint"
            style="@style/et_new_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter points"
            android:inputType="number"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_5"
        android:layout_marginTop="@dimen/dim_20"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCancelLoyaltyPoints"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dim_20"
            android:background="@color/colorAccent"
            android:padding="@dimen/dim_5"
            android:text="@string/CANCEL"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dim_15"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtApplyLoyaltyPoints"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dim_20"
            android:background="@color/dark_pink"
            android:padding="@dimen/dim_5"
            android:text="@string/APPLY"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dim_15"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
